# politylink-tools

./: .gitignore  README.md  alias.py  bill_alias.py  bill_meta.py  bill_thumbnail.py  bill_url.py  cron.py  cron_daily.sh  cron_hourly.sh  delete.py  diet.py  diff_video.py  elasitcsearch_syncer.py  elasticsearch_syncer.py  fetch_member_links.py  fetch_member_table.py  fetch_transcription_results.py  find_bill_news.py  find_news.py  image.py  link.py  logrotate.conf  main.py  member.py  member_image.py  merge_member_links.py  minutes.py  minutes_wordcloud.py  news.py  process_transcription_results.py  pyproject.toml  reindex_news.py  reprocess_minutes.py  submit_transcribe_voice.py  submit_transcription_requests.py  thumbnail.py  timeline.py  transcribe_voice.py  transcribe_voice.sh  (+3 more)
data/: alias.csv  bill_alias.csv  bill_meta.csv  bill_url.csv  delete.csv  diet.csv  link.csv  logrotate_daily.conf  logrotate_hourly.conf  member.csv  member_links.csv  minutes.csv  speech_contexts.json  transcription_template.html  unlink.csv
